fix gap

--- a/src/App.css
+++ b/src/App.css
@@ -313,7 +313,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
   flex: 1;
 }
 .card_big  .bottom .row, .card_big .bottom .row p{
